style edits to fix overlap

--- a/_assets/scss/_styles.scss
+++ b/_assets/scss/_styles.scss
@@ -1004,6 +1004,8 @@ About module
     background:
         url( "/wp-content/themes/karenmcgrane/_assets/fpo/intro-headshot.jpg" ) no-repeat 50% 0 / 100% auto;
     color: #FFF;
+    margin-top: 20px;
+    margin-bottom: 20px;
     outline: 20px solid #382645;
     padding-top: 52.2%;    /* 522/1000 */
 }
